--- a/server/public/style.css
+++ b/server/public/style.css
@@ -1,27 +1,35 @@
-* {
-    outline: red solid 2px;
-}
-
 body {
     text-align: center;
+    margin-top: 0;
+    margin-bottom: 0;
     margin-left: 25%;
     margin-right: 25%;
     background-image: url('./canoe.png');
     background-size: 350px 350px;
     background-position: center;
-    background-color: #607196;
 }
 
 h1 {
     font-size: 2em;
+    background-color: #2c241d;
+    color: #e9e9e4;
+    margin: 0;
+    padding: 2%;
 }
 
 h2 {
     font-size: 3em;
+    background-color: #2e460e;
+    color: #e9e9e4;
+    margin: 0;
+    padding: 2%;
+    border:  #e9e9e4 solid 2px;
 }
 
 h3 {
     font-size: 2em;
+    background-color: #2c241d;
+    color: #e9e9e4;
 }
 
 button {
@@ -30,14 +38,19 @@ button {
     border-radius: 12px;
 }
 
+main {
+    background-color: #2c241d;
+    color: #e9e9e4;
+}
+
 #calculatorDisplay {
     display: flex;
     flex-direction: column;
-    width: 40%;
+    width: auto;
     align-content: center;
     padding: 5%;
-    margin-left: 25%;
-    margin-right: 25%;
+    margin-left: 5%;
+    margin-right: 5%;
     background-color: #9c917d;
 }
 
@@ -155,4 +168,16 @@ button {
 .operator {
     background-color: #2e460e;
     color: #f1f0f7; 
+}
+
+ul {
+    list-style: none;
+    background-color: #2e460e;
+    color: #e9e9e4;
+    margin: 0;
+    padding: 5%;
+}
+
+li {
+    font-size: 2em;
 }
