--- a/server/public/style.css
+++ b/server/public/style.css
@@ -4,9 +4,10 @@ body {
     margin-bottom: 0;
     margin-left: 25%;
     margin-right: 25%;
-    background-image: url('./canoe.png');
+    background-image: url('./long-dino.png');
     background-size: 350px 350px;
     background-position: center;
+    background-color: #2e460e;
 }
 
 h1 {
@@ -24,6 +25,7 @@ h2 {
     margin: 0;
     padding: 2%;
     border:  #e9e9e4 solid 2px;
+    border-radius: 12px;
 }
 
 h3 {
@@ -172,7 +174,7 @@ main {
 
 ul {
     list-style: none;
-    background-color: #2e460e;
+    background-color: #2c241d;
     color: #e9e9e4;
     margin: 0;
     padding: 5%;
