--- a/server/public/style.css
+++ b/server/public/style.css
@@ -20,8 +20,8 @@ h1 {
 
 h2 {
     font-size: 3em;
-    background-color: #2e460e;
-    color: #e9e9e4;
+    background-color:  #fffd82;
+    color: #2c241d;
     margin: 0;
     padding: 2%;
     border:  #e9e9e4 solid 2px;
